fix for left menu button alignment

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -204,6 +204,7 @@ a:hover {
 	background-color: white;
 	padding: 12px;
 	color: @trpGreen;
+	text-align: center;
 }
 
 .trpMenuTab {
